--- a/src/components/Carosel/index.css
+++ b/src/components/Carosel/index.css
@@ -1,17 +1,18 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 .heading-text {
   text-align: left;
   margin-left: 5rem;
   color: white;
   padding-top: 1rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2rem;
+  font-weight: bold
 }
 
-.img-sect{
- display: flex;
- justify-content: center;
- width: 100%;
+.img-sect {
+  display: flex;
+  justify-content: center;
 }
-.img{
- padding-left: 0.5rem;
- 
+.img {
+  padding-left: 0.5rem;
 }
