--- a/src/components/Carosel/index.css
+++ b/src/components/Carosel/index.css
@@ -6,7 +6,7 @@
   padding-top: 1rem;
   font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
-  font-weight: bold
+  font-weight: bold;
 }
 
 .img-sect {
@@ -15,4 +15,8 @@
 }
 .img {
   padding-left: 0.5rem;
+}
+
+#img5{
+  padding-bottom: 2rem;
 }
